--- a/style.css
+++ b/style.css
@@ -2,6 +2,9 @@
   background-color: #ff0000c8;
   box-shadow: 10px 10px 60px #000000ca inset, #00000096 -20px -20px 60px;
 }
+.bg {
+  background-color: #fff;
+}
 
 .navname {
   font-family: cursive;
@@ -16,6 +19,19 @@ section {
   max-width: 100vw;
   min-height: 100vh;
   width: 100%;
+}
+.movie-container {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 20px;
+  margin-top: 300px;
+  margin-left: 80px;
+}
+.posters {
+  flex: 2 -1px 25%;
+  margin-bottom: 90px;
+  border-radius: 5%;
+  border: 5px solid #000000;
 }
 
 .button-36 {
