--- a/style.css
+++ b/style.css
@@ -2,10 +2,23 @@
   background-color: #ff0000c8;
   box-shadow: 10px 10px 60px #000000ca inset, #00000096 -20px -20px 60px;
 }
-.bg {
-  background-color: #fff;
+.bg1 {
+  background-color: #000000;
+  box-shadow: 10px 10px 60px #000000ca inset, #00000096 -20px -20px 60px;
+}
+.bg2 {
+  background-color: #3b0505;
+  box-shadow: 10px 10px 60px #000000ca inset, #00000096 -20px -20px 60px;
 }
 
+.toph1{
+  color: #ffffff;
+  font-family: cursive;
+  font-weight: bolder;
+ font-size: 100px;
+
+  text-align: center;
+}
 .navname {
   font-family: cursive;
   font-weight: bolder;
@@ -23,9 +36,11 @@ section {
 .movie-container {
   display: flex;
   flex-wrap: wrap;
-  gap: 20px;
-  margin-top: 300px;
-  margin-left: 80px;
+  gap: 10px;
+  justify-content: center;
+  padding-top: 5%;
+  
+ 
 }
 .posters {
   flex: 2 -1px 25%;
@@ -41,6 +56,7 @@ section {
   border-radius: 8px;
   border-style: none;
   box-sizing: border-box;
+  font-family: cursive;
   color: #ffffff;
   font-size: 16px;
   font-weight: 500;
@@ -70,24 +86,53 @@ section {
 }
 .bx1 {
   background-color: #000000;
-  height: 400px;
+  height: 500px;
 }
 .tx1 {
   text-align: left;
+  font-family: cursive;
   margin-top: 80px;
   margin-left: 25%;
   color: #ffffff;
   font-size: xx-large;
-}
-.tx2 {
-  text-align: center;
-  color: #ffffff;
+
 }
 .mbox {
-  height: 80%;
+  height: 100%;
 }
 .ibox {
   align-items: center;
   justify-items: center;
   margin-left: 120px;
 }
+.bx2{
+  background-color: #850000;
+  box-shadow: 10px 10px 60px #000000ca inset, #00000096 -20px -20px 60px;
+  height: 500px;
+}
+.footertx{
+  margin-top: 40px;
+  font-family: cursive;
+  margin-left: 130px;
+  color: #ffffff;
+}
+.footertx2{
+  color: #ffffff;
+margin-top: -290px;
+  margin-left: 500px;
+  font-family: cursive;
+}
+.ll{
+  margin-top: 50px;
+ margin-left: 150px;
+}
+.w{
+  margin-left: 40%;
+  color: #ffffff;
+}
+.footertx3{
+color: #ffffff;
+margin-top: -265px;
+  margin-left: 330px;
+}
+
