--- a/style.css
+++ b/style.css
@@ -1,3 +1,4 @@
+
 .navbar {
   background-color: #ff0000c8;
   box-shadow: 10px 10px 60px #000000ca inset, #00000096 -20px -20px 60px;
@@ -7,25 +8,31 @@
   box-shadow: 10px 10px 60px #000000ca inset, #00000096 -20px -20px 60px;
 }
 .bg2 {
-  background-color: #3b0505;
+  background-color: #111010;
   box-shadow: 10px 10px 60px #000000ca inset, #00000096 -20px -20px 60px;
+}
+.BG{
+  background-color: #100f0f;
 }
 
 .toph1{
   color: #ffffff;
-  font-family: cursive;
+  font-family: 'Segoe UI', Tahoma,  Verdana, sans-serif;
   font-weight: bolder;
  font-size: 100px;
+ text-shadow: #000000 3px 3px 15px;
 
   text-align: center;
 }
 .navname {
-  font-family: cursive;
-  font-weight: bolder;
+  font-family: 'Segoe UI', Tahoma,  Verdana, sans-serif;
+  font-weight: bold;
   text-decoration: none;
   color: black;
   font-size: 200%;
   margin-left: 10%;
+  text-shadow: #000000 4px 4px 20px;
+  
 }
 
 section {
@@ -42,21 +49,23 @@ section {
   
  
 }
+
 .posters {
   flex: 2 -1px 25%;
   margin-bottom: 90px;
-  border-radius: 5%;
-  border: 5px solid #000000;
+  border-radius: 3%;
+  border: 7px solid #000000;
 }
 
-.button-36 {
+
+
+.button{
   background-color: #ff0000c8;
   box-shadow: 10px 10px 60px #000000ca inset, #00000096 -20px -20px 60px;
-
   border-radius: 8px;
   border-style: none;
   box-sizing: border-box;
-  font-family: cursive;
+  font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
   color: #ffffff;
   font-size: 16px;
   font-weight: 500;
@@ -66,7 +75,7 @@ section {
   transition: all 0.5s;
 }
 
-.button-36:hover {
+.button:hover {
   color: #000000;
   font-size: xx-large;
   box-shadow: #45b5d4 1px 1px 50px;
@@ -74,7 +83,7 @@ section {
 }
 
 @media (min-width: 768px) {
-  .button-36 {
+  .button {
     padding: 0 2.6rem;
   }
 }
@@ -106,7 +115,7 @@ section {
   margin-left: 120px;
 }
 .bx2{
-  background-color: #850000;
+  background-color: #600000;
   box-shadow: 10px 10px 60px #000000ca inset, #00000096 -20px -20px 60px;
   height: 500px;
 }
