--- a/style.css
+++ b/style.css
@@ -119,6 +119,11 @@ section {
   box-shadow: 10px 10px 60px #000000ca inset, #00000096 -20px -20px 60px;
   height: 500px;
 }
+.bx3{
+  background-color: #600000;
+  box-shadow: 10px 10px 60px #000000ca inset, #00000096 -20px -20px 60px;
+  height: 80px;
+}
 .footertx{
   margin-top: 40px;
   font-family: 'Segoe UI', Tahoma,  Verdana, sans-serif;
@@ -134,6 +139,10 @@ margin-top: -290px;
 .ll{
   margin-top: 50px;
  margin-left: 150px;
+}
+.l2{
+  margin-top: 30px;
+  margin-left: 450px;
 }
 .w{
   margin-left: 40%;
