--- a/style.css
+++ b/style.css
@@ -1,8 +1,5 @@
-
 .navbar {
   background-color: #0099ff;
-  
-
 }
 .bg1 {
   background-color: #ffffff;
@@ -12,38 +9,35 @@
   background-color: #ffffff;
   box-shadow: 10px 10px 60px #635858ca inset, #00000096 -20px -20px 60px;
 }
-.carel{
+.carel {
   margin-top: 80px;
-
-
 }
-.BG{
+.BG {
   background-color: #ffffff;
 }
-.h{
+.h {
   color: #000000;
 }
-.h1{
+.h1 {
   color: #000000;
 }
-.toph1{
+.toph1 {
   color: #000000;
-  font-family: 'Segoe UI', Tahoma,  Verdana, sans-serif;
+  font-family: "Segoe UI", Tahoma, Verdana, sans-serif;
   font-weight: bolder;
- font-size: 100px;
- text-shadow: #000000 3px 3px 15px;
+  font-size: 100px;
+  text-shadow: #000000 3px 3px 15px;
 
   text-align: center;
 }
 .navname {
-  font-family: 'Segoe UI', Tahoma,  Verdana, sans-serif;
+  font-family: "Segoe UI", Tahoma, Verdana, sans-serif;
   font-weight: bold;
   text-decoration: none;
   color: rgb(255, 255, 255);
   font-size: 200%;
   margin-left: 10%;
   text-shadow: #000000 4px 4px 20px;
-  
 }
 
 section {
@@ -57,22 +51,24 @@ section {
   gap: 10px;
   justify-content: center;
   padding-top: 5%;
-  
 }
 .posters {
   flex: 2 -1px 25%;
   margin-bottom: 90px;
   border-radius: 5%;
   border: 5px solid #000000;
+  display: flex;
+  flex-direction: column;
+  flex-flow: column-reverse;
 }
 
-.button{
+.button {
   background-color: #0099ff;
   box-shadow: 20px 20px 60px #0000007a inset, #00000096 -30px -30px 60px;
   border-radius: 8px;
   border-style: none;
   box-sizing: border-box;
-  font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+  font-family: "Franklin Gothic Medium", "Arial Narrow", Arial, sans-serif;
   color: #ffffff;
   font-size: 16px;
   font-weight: 500;
@@ -93,4 +89,100 @@ section {
   .button {
     padding: 0 2.6rem;
   }
+}
+
+.a-btn {
+  background-color: #1ca4ff;
+}
+.ab {
+  background-color: #fff;
+  color: #000;
+}
+.p-btn {
+  border-radius: 700px;
+  text-decoration: none;
+  font-size: 20px;
+  color: #000;
+  background-color: #0099ff;
+}
+/* footer */
+footer {
+  bottom: 0;
+  left: 0;
+  right: 0;
+  background-color: #111;
+  height: auto;
+  /* width: 100; */
+  font-family: "open sans";
+  padding-top: 40px;
+  color: #ffffff;
+}
+.footer-content {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  text-align: center;
+}
+.footer-centent h3 {
+  font-size: 1.8rem;
+  font-weight: 400;
+  text-transform: capitalize;
+  line-height: 3rem;
+}
+h3 {
+  background-color: #0099ff;
+  border-radius: 5%;
+  width: 200px;
+}
+
+.footer-centent p {
+  max-width: 500px;
+  margin: 10px auto;
+  line-height: 28px;
+  font-size: 14px;
+}
+.socials {
+  list-style: none;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin: 1rem 0 3rem 0;
+}
+.socials li {
+  margin: 0 10px;
+}
+.socials a {
+  text-decoration: none;
+  color: #ffffff;
+}
+.socials a i {
+  font-size: 1.1rem;
+}
+.socials a:hover i {
+  font-size: 1.1rem;
+}
+.socials a:hover i {
+  color: #0099ff;
+}
+.footer-bottom {
+  background: #000;
+  padding: 20px 0;
+  text-align: center;
+}
+.footer-bottom p {
+  font-size: 14px;
+  word-spacing: 2px;
+  text-transform: capitalize;
+}
+.footer-bottom span {
+  text-transform: uppercase;
+  opacity: 0.4;
+  font-weight: 200;
+}
+.card {
+  margin-left: 150px;
+  height: 50px;
+
+  width: 301px;
 }
