--- a/style.css
+++ b/style.css
@@ -52,11 +52,16 @@ section {
   justify-content: center;
   padding-top: 5%;
 }
+.pbtn{
+ height: 60px;
+  background-color: #0099ff;
+  font-size: x-large;
+  font-weight: 900;
+}
 .posters {
   flex: 2 -1px 25%;
   margin-bottom: 90px;
-  border-radius: 5%;
-  border: 5px solid #000000;
+  border: 3px solid #000000;
   display: flex;
   flex-direction: column;
   flex-flow: column-reverse;
@@ -180,9 +185,4 @@ h3 {
   opacity: 0.4;
   font-weight: 200;
 }
-.card {
-  margin-left: 150px;
-  height: 50px;
 
-  width: 301px;
-}
